--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -137,9 +137,10 @@ Using `triangulate()` without any other stage in the pipeline is usually not ver
 
 `rasterize()` does exactly what users may expect from it and even more. There are three variations:
 
-1. Rasterize with predefined operators. The operators are optimized internally, making the operations as fast as possible, but the number of registered operators is finite.
-2. Rasterize by injecting a user-defined R expression. This is equivalent to `pixel_metrics()` from the package `lidR`. Any user-defined function can be mapped, making it extremely versatile but slower.
-3. Rasterize a Delaunay triangulation.
+1. Rasterize a Delaunay triangulation.
+2. Rasterize with predefined operators. The operators are optimized internally, making the operations as fast as possible.
+3. Rasterize by injecting a user-defined R expression. This is equivalent to `pixel_metrics()` from the package `lidR`. Any user-defined function can be mapped, making it extremely versatile but slower.
+
 
 With these variations, users can build a CHM, a DTM, a predictive model, or anything else. 
 
@@ -166,9 +167,11 @@ Notice that, contrary to the `lidR` package, there is usually no high-level func
 
 ### Rasterize - internal metrics
 
+Internal metrics are strings with a format `attribute_function`. `attribute` is an attribute of the point cloud such as `z`, `classification`, or `intensity`. `function` is an available metrics function such as `mean`, `max`, or `sd`. The following are exemples of valid metric strings: `z_max`, `i_mean`, `intensity_mean`, `classification_mode`, `z_sd`. Readers can refer to the official documentation to discover all the possible combinations.
+
 Let's build two CHMs: one based on the highest point per pixel with a resolution of 2 meters, and the second based on the triangulation of the first returns with a resolution of 50 cm.
 
-In the following pipeline, we are using two variations of `rasterize()`: one capable of rasterizing a triangulation and the other capable of rasterizing the point cloud with a predefined operator (here `max`). The output is a named `list` with two `SpatRaster`.
+In the following pipeline, we are using two variations of `rasterize()`: one capable of rasterizing a triangulation and the other capable of rasterizing the point cloud with a predefined operator (here `max` is interpreted as `z_max` in absence of explicit attribute). The output is a named `list` with two `SpatRaster`.
 
 ```{r, echo = FALSE}
 f <- system.file("extdata", "Megaplot.las", package="lasR")
@@ -189,24 +192,13 @@ terra::plot(ans[[2]], mar = c(1, 1, 1, 3), col = col)
 For simplicity the package has pre-installed pipelines named `chm()` and `dtm()` that do what is explained above.
 </blockquote>
 
-### Rasterize - custom metrics
+### Rasterize - R expression
 
-Last but not least, let's compute the map of the median intensity by injecting a user-defined expression. Like in `lidR`, the attributes of the point cloud are named: `X`, `Y`, `Z`, `Intensity`, `gpstime`, `ReturnNumber`, `NumberOfreturns`, `Classification`, `UserData`, `PointSourceID`, `R`, `G`, `B`, `NIR`. For users familiar with the `lidR` package, note that there is no `ScanAngleRank/ScanAngle`;  instead the scanner angle is always named `ScanAngle` and is numeric. Also flags are named `Withheld`, `Synthetic` and `Keypoint`.
-
-```{r rasterize3, fig.height=3.5}
-pipeline = rasterize(10, median(Intensity))
-ans = exec(pipeline, on = f)
-
-terra::plot(ans, mar = c(1, 1, 1, 3), col = heat.colors(15))
-```
-
-Notice that, in this specific case, using `rasterize(10, "imean")` is more efficient.
+This special case is covered in a special tutorial about [R-based stages](r-stages.html)
 
 ### Rasterize - buffered
 
-<blockquote style="background-color: #d6e9f9; border-left: 5px solid #428bca; padding: 10px;font-size: 14px; border-radius: 5px;">
 The `lasR` package introduced the concept of a buffered area-based approach to enhance the resolution of prediction maps. However, this concept is not covered in detail in this tutorial. For further information, readers can refer to the [dedicated article](baba.html)
-</blockquote>
 
 ## Transform with
 
@@ -328,144 +320,9 @@ terra::plot(ans$region_growing, col = col2[sample.int(50, 277, TRUE)], mar = c(1
 plot(ans$local_maximum$geom, add = T, pch = 19, cex = 0.5)
 ```
 
-## Callback
-
-The `callback` stage holds significant importance as the second and last entry point to inject R code into the pipeline, following `rasterize()`. For those familiar with the `lidR` package, the initial step often involves reading data with `lidR::readLAS()` to expose the point cloud as a `data.frame` object in R. In contrast, `lasR` loads the point cloud optimally in C++ without exposing it directly to R. However, with `callback`, it becomes possible to expose the point cloud as a `data.frame` for executing specific R functions.
-
-Similar to `lidR`, the attributes of the point cloud in `lasR` are named: `X`, `Y`, `Z`, `Intensity`, `gpstime`, `ReturnNumber`, `NumberOfreturns`, `Classification`, `UserData`, `PointSourceID`, `R`, `G`, `B`, `NIR`. Notably, for users accustomed to the `lidR` package, the scanner angle is consistently named `ScanAngle` and is numeric, as opposed to `ScanAngleRank/ScanAngle`. Additionally, flags are named `Withheld`, `Synthetic`, and `Keypoint`.
-
-Let's delve into a simple example. For each LAS file, the `callback` loads the point cloud as a `data.frame` and invokes the `meanz()` function on the `data.frame`.
-
-```{r, echo = FALSE}
-f <- c(system.file("extdata", "Topography.las", package="lasR"), system.file("extdata", "Megaplot.las", package="lasR"))
-```
-
-```{r callback}
-meanz = function(data){ return(mean(data$Z)) }
-call = callback(meanz, expose = "xyz")
-ans = exec(call, on = f)
-print(ans)
-```
-Here the output is a `list` with two elements because we processed two files (`f` is not displayed in this document). The average Z elevation are respectively 809.08 and 13.27 in each file.
-
-<blockquote style="background-color: #fff3cd; border-left: 5px solid #ffc107; padding: 10px; font-size: 14px; border-radius: 5px;">
-Be mindful that, for a given LAS/LAZ file, the point cloud may contain more points than the original file **if the file is loaded with a buffer**. Further clarification on this matter will be provided later.
-</blockquote>
-
-The `callback` function is versatile and can also be employed to edit the point cloud. When the user-defined function returns a `data.frame` with the same number of rows as the original one, the function edits the underlying C++ dataset. This enables users to perform tasks such as assigning a class to a specific point. While physically removing points is not possible, users can flag points as `Withheld`. In such cases, these points will not be processed in subsequent stages, they are discarded.
-
-
-```{r callback2}
-edit_points = function(data)
-{
-  data$Classification[5:7] = c(2L,2L,2L)
-  data$Withheld = FALSE
-  data$Withheld[12] = TRUE
-  return(data)
-}
-
-call = callback(edit_points, expose = "xyzc")
-ans = exec(call, on = f)
-ans
-```
-
-As observed, here, this time `callback` does not explicitly return anything; however, it edited the point cloud internally. To generate an output, users must use another stage such as `write_las()`. It's important to note that `write_las()` will **NOT** write the point number 12 which is flagged `withheld`. Neither any subsequent stage will process it. The point is still in memory but is discarded.
-
-<blockquote style="background-color: #f8d7da; border-left: 5px solid #dc3545; padding: 10px; font-size: 14px; border-radius: 5px;">
-For memory and efficiency reasons, it is not possible to physically remove a point from the underlying memory in `lasR`. Instead, the points flagged as `withheld` will **never be processed**. One consequence of this, is that points flagged as withheld in a LAS/LAZ file **will not** be processed in `lasR`. This aligns with the intended purpose of the flag according to the LAS specification but may differ from the default behavior of many software on the market including `lidR`.
-</blockquote>
-
-Now, let's explore the capabilities of `callback` further. First, let's create a lidR-like `read_las()` function to expose the point cloud to R. In the following example, the user-defined function is employed to return the `data.frame` as is. When the user's function returns a `data.frame` with the same number of points as the original dataset, this updates the points at the C++ level. Here, we use `no_las_update = TRUE` to explicitly return the result.
-
-
-```{r callback3}
-read_las = function(f, select = "xyzi", filter = "")
-{
-  load = function(data) { return(data) }
-  read = reader_las(filter = filter)
-  call = callback(load, expose = select, no_las_update = TRUE)
-  return (exec(read+call, on = f))
-}
-
-f <- system.file("extdata", "Topography.las", package="lasR")
-las = read_las(f)
-head(las)
-```
-
-Ground points can also be classified using an R function, such as the one provided by the `RCSF` package:
-
-```r
-csf = function(data)
-{
-  id = RCSF::CSF(data)
-  class = integer(nrow(data))
-  class[id] = 2L
-  data$Classification <- class
-  return(data)
-}
-
-read = reader_las()
-classify = callback(csf, expose = "xyz")
-write = write_las()
-pipeline = read + classify + write
-exec(pipeline, on = f)
-```
-
-<blockquote style="background-color: #fff3cd; border-left: 5px solid #ffc107; padding: 10px; font-size: 14px; border-radius: 5px;">
-`callback()` exposes the point cloud as a `data.frame`. This is the only way to expose the point clouds to users in a manageable way. One of the reasons why `lasR` is more memory-efficient and faster than `lidR` is that it **does not** expose the point cloud as a `data.frame`. Thus, the pipelines using `callback()` are not significantly different from `lidR`. The advantage of using `lasR` here is the ability to pipe different stages.
-</blockquote>
-
 ## Buffer
 
-Point clouds are typically stored in multiple contiguous files. To avoid edge artifacts, each file must be loaded with extra points coming from neighboring files. Everything is handled automatically, except for the `callback()` stage. In `callback()`, the point cloud is exposed as a `data.frame` with the buffer, providing the user-defined function with some spatial context. If `callback` is used to edit the points, everything is handled internally. However, if an R object is returned, it is the responsibility of the user to handle the buffer.
-
-For example, in the following pipeline, we are processing two files, and `callback()` is used to count the number of points. The presence of `triangulate()` implies that each file will be loaded with a buffer to make a valid triangulation. Consequently, counting the points in `callback()` returns more points than `summarise()` because `summarise()` is an internal function that knows how to deal with the buffer.
-
-```{r, echo = FALSE}
-f = paste0(system.file(package="lasR"), "/extdata/bcts")
-f = list.files(f, pattern = "(?i)\\.la(s|z)$", full.names = TRUE)
-f = f[1:2]
-```
-
-```{r buffer}
-count = function(data) { length(data$X) }
-del = triangulate(filter = keep_ground())
-npts = callback(count, expose = "x")
-sum = summarise()
-ans = exec(del + npts + sum, on = f)
-print(ans$callback)
-ans$callback[[1]]+ ans$callback[[2]]
-ans$summary$npoints
-```
-
-We can compare this with the pipeline without `triangulate()`. In this case, there is no reason to use a buffer, and the files are not buffered. The counts are equal.
-
-
-```{r buffer2}
-ans = exec(npts + sum, on = f)
-ans$callback[[1]]+ ans$callback[[2]]
-ans$summary$npoints
-```
-
-To handle the buffer, the user can read the attribute `bbox` of the `data.frame`. It contains the bounding box of the point cloud without the buffer or use the column `Buffer` that contains `TRUE` or `FALSE` for each point. If `TRUE`, the point is in the buffer. The buffer is exposed only if the user includes the letter `'b'`.
-
-```{r buffer3}
-count_buffer_aware = function(data) {
-  bbox = attr(data, "bbox")
-  npoints = sum(!data$Buffer)
-  return(list(bbox = bbox, npoints = npoints))
-}
-
-del = triangulate(filter = keep_ground())
-npts = callback(count_buffer_aware, expose = "b") # b for buffer
-sum = summarise()
-ans = exec(del + npts + sum, on = f)
-print(ans$callback)
-ans$callback[[1]]$npoints+ ans$callback[[2]]$npoints
-ans$summary$npoints
-```
-
-In conclusion, in the hypothesis that the user-defined function returns something complex, there are two ways to handle the buffer: either using the bounding box or using the `Buffer` flag. A third option is to use `drop_buffer`. In this case users ensure to receive a `data.frame` that does not include points from the buffer.
+Point clouds are typically stored in multiple contiguous files. To avoid edge artifacts, each file must be loaded with extra points coming from neighboring files. Everything is handled automatically.
 
 ## Hulls
 
@@ -628,7 +485,7 @@ In the case of a `LAScatalog`, `exec()` respects the processing options of the `
 
 ## Stop pipeline if
 
-A pipeline can be a long succession of stages and it may happens that we do not want to apply the entire pipeline on every files. In this case the `stop_if` stages allows to conditionally stop the pipeline anywhere. Let assume we have a dataset with 100 files and pipeline that reads, computes the hulls, computes the DTM
+A pipeline can be a long succession of stages, and it may happen that we do not want to apply the entire pipeline on every file. In this case, the `stop_if` stage allows us to conditionally stop the pipeline anywhere. Let's assume we have a dataset with 100 files and a pipeline that reads, computes the hulls, and computes the DTM.
 
 ```r
 read = reader_las()
@@ -638,26 +495,26 @@ dtm = rasterize(1, tri)
 pipeline = read + hll + tri + dtm
 ```
 
-It is possible to computes the hulls on the 100 files but the DTM only in a reduced regions of interest defined by the user with `stop_if_outside()`
+It is possible to compute the hulls on the 100 files but the DTM only in a reduced region of interest defined by the user with `stop_if_outside()`.
 
 ```r
 stopif <- stop_if_outside(880000, 620000, 885000, 630000)
 pipeline <- read + hll + stopif + tri + dtm
 ```
 
-`stop_if` is (currently) the only stage than can be put before `reader_las()`. In this case the reading stage is skipped, effectively applying the pipeline on a subset of the files than encompasse the bounding boxe defined by the user.
+`stop_if` is (currently) the only stage that can be put before `reader_las()`. In this case, the reading stage is skipped, effectively applying the pipeline to a subset of the files that encompass the bounding boxes defined by the user.
 
 ```r
 pipeline <- stopif + read + hll + tri + dtm
 ```
 
-Notice that the pipeline below, produces the same output than the pipeline above but takes longer to compute because the files that are not processed are read anyway. It is thus preferable to put `stop_if()` before `reader_las()`in this specific case.
+Notice that the pipeline below produces the same output as the pipeline above but takes longer to compute because the files that are not processed are read anyway. It is thus preferable to put `stop_if()` before `reader_las()` in this specific case.
 
 ```r
 pipeline <- read + stopif + hll + tri + dtm
 ```
 
-Currently there is only one `stop_if` stage that conditionally stops the pipeline based on bounding box condition but if will be easy to add more options later on demand.
+Currently, there is only one `stop_if` stage that conditionally stops the pipeline based on a bounding box condition, but it will be easy to add more options later on demand.
 
 ## Parallel processing
 
@@ -669,6 +526,7 @@ The topic is covered in a [dedicated article](multithreading.html)
 
 - `add_extrabytes()`
 - `add_rgb()`
+- `callback()`
 - `classify_isolated_voxel()`
 - `delete_points()`
 - `geometry_features()`
