--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -69,14 +69,14 @@ A pipeline created from the R interface does nothing initially. After building t
 
 ## Reader
 
-The `reader_las()` stage MUST be the first stage of any pipeline (blue in the figure above). This stage reads the point cloud if necessary. When creating a pipeline with only this stage, the header of the files are read, but no computation is actually applied. The points are thus not even read because there is no other stage in the pipeline that require to read the points. No result is returned.
+The `reader()` stage MUST be the first stage of any pipeline (blue in the figure above). This stage reads the point cloud if necessary. When creating a pipeline with only this stage, the header of the files are read, but no computation is actually applied. The points are thus not even read because there is no other stage in the pipeline that require to read the points. No result is returned.
 
 ```{r, echo = F}
 f = paste0(system.file(package="lasR"), "/extdata/bcts")
 ```
 
 ```{r reader}
-pipeline = reader_las()
+pipeline = reader()
 exec(pipeline, on = f)
 ```
 
@@ -97,7 +97,7 @@ f <- system.file("extdata", "Topography.las", package="lasR")
 ```
 
 ```{r triangulate1}
-pipeline = reader_las() + triangulate(filter = "Classification == 2")
+pipeline = reader() + triangulate(filter = "Classification == 2")
 ans = exec(pipeline, on = f)
 ans
 ```
@@ -105,7 +105,7 @@ ans
 In the following pipeline the triangulation is stored in a geopackage file by providing an argument `ofile`:
 
 ```{r triangulate2, fig.width=5, fig.height=5}
-pipeline = reader_las() + triangulate(filter = keep_ground(), ofile = tempgpkg())
+pipeline = reader() + triangulate(filter = keep_ground(), ofile = tempgpkg())
 ans = exec(pipeline, on = f)
 ans
 
@@ -116,7 +116,7 @@ plot(ans, axes = T, lwd = 0.5)
 Notice the use of `keep_ground()` which is a shortcut for `"Classification == 2"`. We can also triangulate the first returns. This produce a meshed Digital Surface Model.
 
 ```r
-read = reader_las()
+read = reader()
 del = triangulate(filter = keep_first(), ofile = tempgpkg())
 ans = exec(read+del, on = f)
 ```
@@ -124,7 +124,7 @@ ans = exec(read+del, on = f)
 We can also perform both triangulations in the same pipeline. The idea of `lasR` is to execute all the tasks in one pass using a pipeline:
 
 ```r
-read = reader_las()
+read = reader()
 del1 = triangulate(filter = keep_ground(), ofile = tempfile(fileext = ".gpkg"))
 del2 = triangulate(filter = keep_first(), ofile = tempfile(fileext = ".gpkg"))
 pipeline = read + del1 + del2
@@ -148,7 +148,7 @@ With these variations, users can build a CHM, a DTM, a predictive model, or anyt
 Let's build a DTM using a triangulation of the ground points and the `rasterize()` stage. In the following pipeline, the LAS files are read, points are loaded for each LAS file **with a buffer**, a Delaunay triangulation of the ground points is built, and then the triangulation is interpolated and rasterized. By default, `rasterize()` writes the raster in a temporary file, so the result is not discarded.
 
 ```{r rasterize}
-# omitting reader_las() for the example
+# omitting reader() for the example
 del = triangulate(filter = keep_ground())
 dtm = rasterize(1, del)
 pipeline = del + dtm
@@ -273,7 +273,7 @@ f = c(f,f)
 
 ```{r writelas2}
 ofile = paste0(tempdir(), "/dataset_merged.laz")
-merge = reader_las() + write_las(ofile)
+merge = reader() + write_las(ofile)
 ans = exec(merge, on = f)
 ans
 ```
@@ -353,11 +353,11 @@ However `hulls()` is more likely to be used without a triangulation. In this cas
 
 ## Readers
 
-`reader_las()` MUST be the first stage of each pipeline even if it can conveniently be omitted in its simplest form. However there are several readers hidden behind `reader_las()`: 
+`reader()` MUST be the first stage of each pipeline even if it can conveniently be omitted in its simplest form. However there are several readers hidden behind `reader()`: 
 
-- `reader_las_coverage()`: will read of the files and process the entire point cloud. This is the default behavior of `reader_las()`.
-- `reader_las_rectangles()`: will read only some rectangular regions of interest of the coverage and process then sequentially.
-- `reader_las_circles()`: will read only some circular regions of interest of the coverage and process then sequentially.
+- `reader_coverage()`: will read of the files and process the entire point cloud. This is the default behavior of `reader()`.
+- `reader_rectangles()`: will read only some rectangular regions of interest of the coverage and process then sequentially.
+- `reader_circles()`: will read only some circular regions of interest of the coverage and process then sequentially.
 
 The following pipeline triangulates the ground points, normalizes the point cloud, and computes some metric of interest **for each file of the entire coverage**. Each file is loaded with a buffer so that triangulation is performed without edge artifacts. Notice the use of `drop_buffer = TRUE` to expose the `data.frame` without the buffer used to perform the triangulation and normalization.
 
@@ -373,7 +373,7 @@ pipeline = norm + metric
 The following pipeline, on the contrary, works exactly the same but operates only on circular plots.
 
 ```{r, eval = FALSE}
-pipeline = reader_las_circles(xcenter, ycenter, 11.28) + pipeline
+pipeline = reader_circles(xcenter, ycenter, 11.28) + pipeline
 ```
 
 These readers allow building a ground inventory pipeline, or a plot extraction for examples
@@ -388,7 +388,7 @@ f = list.files(f, pattern = "(?i)\\.la(s|z)$", full.names = TRUE)
 ```
 
 ```{r summary}
-read = reader_las()
+read = reader()
 summary = summarise()
 pipeline = read + summary
 ans = exec(pipeline, on = f)
@@ -426,7 +426,7 @@ coordinates <- st_coordinates(inventory)
 xcenter <- coordinates[,1]
 ycenter <- coordinates[,2]
 
-read <- reader_las(xc = xcenter, yc = ycenter, r = 11.28) 
+read <- reader(xc = xcenter, yc = ycenter, r = 11.28) 
 tri <- triangulate(filter = keep_ground())
 trans <- transform_with(tri)
 norm <- tri + trans
@@ -439,7 +439,7 @@ pipeline = read + write1 + norm + write2
 
 ## Wildcard Usage
 
-Usually, `write_las()` is used with a wildcard in the `ofile` argument (see above) to write one file per processed file. Otherwise, everything is written into a single massive LAS file (which might be the desired behavior). On the contrary, `rasterize()` is used without a wildcard to write everything into a single raster file, but it also accepts a wildcard to write the results in multiple files, which is very useful with `reader_las_circles()` to avoid having one massive raster mostly empty. Compare this pipeline with and without the wildcard.
+Usually, `write_las()` is used with a wildcard in the `ofile` argument (see above) to write one file per processed file. Otherwise, everything is written into a single massive LAS file (which might be the desired behavior). On the contrary, `rasterize()` is used without a wildcard to write everything into a single raster file, but it also accepts a wildcard to write the results in multiple files, which is very useful with `reader_circles()` to avoid having one massive raster mostly empty. Compare this pipeline with and without the wildcard.
 
 ```{r, echo = FALSE}
 f = paste0(system.file(package="lasR"), "/extdata/bcts/")
@@ -455,7 +455,7 @@ ofile = paste0(tempdir(), "/chm.tif")   # no wildcard
 x = c(885100, 885100)
 y = c(629200, 629600)
 
-pipeline = reader_las(xc = x, yc = y, r = 20) + rasterize(2, "max", ofile = ofile)
+pipeline = reader(xc = x, yc = y, r = 20) + rasterize(2, "max", ofile = ofile)
 r0 = exec(pipeline, on = f)
 
 terra::plot(r0, col = col) # covers the entire collection of files
@@ -469,7 +469,7 @@ ofile = paste0(tempdir(), "/chm_*.tif") # wildcard
 x = c(885100, 885100)
 y = c(629200, 629600)
 
-pipeline = reader_las(xc = x, yc = y, r = 20) + rasterize(2, "max", ofile = ofile)
+pipeline = reader(xc = x, yc = y, r = 20) + rasterize(2, "max", ofile = ofile)
 ans = exec(pipeline, on = f)
 
 r1 = terra::rast(ans[1])
@@ -502,7 +502,7 @@ In the case of a `LAScatalog`, `exec()` respects the processing options of the `
 A pipeline can be a long succession of stages, and it may happen that we do not want to apply the entire pipeline on every file. In this case, the `stop_if` stage allows us to conditionally stop the pipeline anywhere. Let's assume we have a dataset with 100 files and a pipeline that reads, computes the hulls, and computes the DTM.
 
 ```r
-read = reader_las()
+read = reader()
 hll = hulls()
 tri = triangulate(filter = keep_ground())
 dtm = rasterize(1, tri)
@@ -516,13 +516,13 @@ stopif <- stop_if_outside(880000, 620000, 885000, 630000)
 pipeline <- read + hll + stopif + tri + dtm
 ```
 
-`stop_if` is (currently) the only stage that can be put before `reader_las()`. In this case, the reading stage is skipped, effectively applying the pipeline to a subset of the files that encompass the bounding boxes defined by the user.
+`stop_if` is (currently) the only stage that can be put before `reader()`. In this case, the reading stage is skipped, effectively applying the pipeline to a subset of the files that encompass the bounding boxes defined by the user.
 
 ```r
 pipeline <- stopif + read + hll + tri + dtm
 ```
 
-Notice that the pipeline below produces the same output as the pipeline above but takes longer to compute because the files that are not processed are read anyway. It is thus preferable to put `stop_if()` before `reader_las()` in this specific case.
+Notice that the pipeline below produces the same output as the pipeline above but takes longer to compute because the files that are not processed are read anyway. It is thus preferable to put `stop_if()` before `reader()` in this specific case.
 
 ```r
 pipeline <- read + stopif + hll + tri + dtm
