--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -52,12 +52,12 @@ print.list <- function(my_list, indent = 0) {
 This tutorial is intended to be read in order. It introduces the available tools of the package in a specific order so that the reader can discover all the features of the package organically.
 
 <blockquote style="background-color: #d6e9f9; border-left: 5px solid #428bca; padding: 10px;font-size: 14px; border-radius: 5px;">
-In the following tutorial, the variable `f` refers to one or several file paths stored in a vector. It can also be the path to a directory or the path of a  [virtual point cloud](https://www.lutraconsulting.co.uk/blog/2023/06/08/virtual-point-clouds/). In this tutorial, the output is rendered with one or two small LAS files, but every pipeline is designed to process numerous files covering a large extent.
+In the following tutorial, the variable `f` refers to one or several file paths stored in a vector. It can also be the path to a directory or the path of a  [virtual point cloud](https://www.lutraconsulting.co.uk/blog/2023/06/08/virtual-point-clouds/). It can also be a point cloud loaded in memory. In this tutorial, the output is rendered with one or two small LAS files, but every pipeline is designed to support the processing of numerous files covering a large extent.
 </blockquote>
 
 ## Overall functionality
 
-In `lasR`, the R functions provided to the user are not designed to process the data directly; instead, they are used to create a pipeline. A pipeline consists of stages that are applied to a point cloud in order. Each stage can either transform the point cloud within the pipeline without generating any output or process the point cloud to produce an output.
+In `lasR`, the R functions provided to the user are not designed to process the data directly; instead, they are used to create a pipeline. A pipeline consists of atomic stages that are applied to a point cloud in order. Each stage can either transform the point cloud within the pipeline without generating any output or process the point cloud to produce an output.
 
 In the figure below, there are 4 LAS/LAZ files and a pipeline that (1) reads a file, (2) builds and writes a DTM on disk, (3) transforms the point cloud by normalizing the elevation, (4) builds a canopy height model using the transformed point cloud, and (5) transforms the point cloud by removing points below 5 m. The resulting version of the point cloud (points above 5m) is discarded and lost because there is no additional stage in this pipeline. However, other stages can be added, such as the application of a predictive model for points above 5 m or a stage that writes the point cloud to disk.
 
@@ -69,7 +69,7 @@ A pipeline created from the R interface does nothing initially. After building t
 
 ## Reader
 
-The `reader()` stage MUST be the first stage of any pipeline (blue in the figure above). This stage reads the point cloud if necessary. When creating a pipeline with only this stage, the header of the files are read, but no computation is actually applied. The points are thus not even read because there is no other stage in the pipeline that require to read the points. No result is returned.
+The `reader()` stage MUST be the first stage of any pipeline (blue in the figure above). This stage reads the point cloud. When creating a pipeline with only this stage, the header of the files are read, but no computation is actually applied. No result is returned.
 
 ```{r, echo = F}
 f = paste0(system.file(package="lasR"), "/extdata/bcts")
@@ -80,15 +80,13 @@ pipeline = reader()
 exec(pipeline, on = f)
 ```
 
-In practice when using `read_las()` without argument it can be omitted, the function `exec` adds it on-the-fly.
+In practice when using `reader()` without argument it can be omitted, the function `exec` adds it on-the-fly.
 
 ## Triangulate
 
 The first stage we can try is `triangulate()`. This algorithm performs a Delaunay triangulation on the points of interest. Triangulating points is a very useful task that is employed in numerous processing tasks. Triangulating all points is not very interesting, so we usually want to use the `filter` argument to triangulate only specific points of interest.
 
-In the following example, we triangulate the points classified as 2 (i.e., ground). This produces a meshed Digital Terrain Model.
-
-In this example, the files are read sequentially, with points loaded one by one and stored to build a Delaunay triangulation. In `lasR`, only one file is stored in memory at a time. The program stores the point cloud and the Delaunay triangulation for the current processing file. Then the data are discarded to load a new file.
+In the following example, we triangulate the points classified as 2 (i.e., ground). This produces a meshed Digital Terrain Model. The files are read sequentially, with points loaded one by one and stored to build a Delaunay triangulation. The program stores the point cloud and the Delaunay triangulation for the current processing file. Then the data are discarded to load a new file.
 
 If the users do not provide a path to an output file to store the result, the result is lost. In the following pipeline, we are building a triangulation of the ground points, but we get no output because everything is lost.
 
@@ -110,7 +108,7 @@ ans = exec(pipeline, on = f)
 ans
 
 par(mar = c(2, 2, 1, 1))
-plot(ans, axes = T, lwd = 0.5)
+plot(ans, axes = T, lwd = 0.5,  cex.axis = 0.5)
 ```
 
 Notice the use of `keep_ground()` which is a shortcut for `"Classification == 2"`. We can also triangulate the first returns. This produce a meshed Digital Surface Model.
@@ -121,12 +119,12 @@ del = triangulate(filter = keep_first(), ofile = tempgpkg())
 ans = exec(read+del, on = f)
 ```
 
-We can also perform both triangulations in the same pipeline. The idea of `lasR` is to execute all the tasks in one pass using a pipeline:
+We can also perform both triangulations in the same pipeline. **The idea of `lasR` is to execute all the tasks in one pass using a pipeline:**
 
 ```r
 read = reader()
-del1 = triangulate(filter = keep_ground(), ofile = tempfile(fileext = ".gpkg"))
-del2 = triangulate(filter = keep_first(), ofile = tempfile(fileext = ".gpkg"))
+del1 = triangulate(filter = keep_ground(), ofile = tempgpkg())
+del2 = triangulate(filter = keep_first(), ofile = tempgpkg())
 pipeline = read + del1 + del2
 ans = exec(pipeline, on = f)
 ```
@@ -291,7 +289,7 @@ pipeline = chm + lm1 + lm2
 
 ## Tree Segmentation
 
-This section presents a complex pipeline for tree segmentation using `local_maximum_raster()` to identify tree tops on a CHM. It uses `region_growing()` to segment the trees using the seeds produced by `local_maximum_raster()`. The Canopy Height Model (CHM) is triangulation-based using `triangulation()` and `rasterize()` in the first returns. The CHM is post-processed with `pit_fill()`, an algorithm designed to enhance the CHM by filling pits and NAs. The reader may have noticed that the seeds are produced with the same raster than the one used in `region_growing()`. This is checked internally to ensure the seeds are matching the raster used for segmenting the trees. 
+This section presents a complex pipeline for tree segmentation using `local_maximum_raster()` to identify tree tops on a CHM. It uses `region_growing()` to segment the trees using the seeds produced by `local_maximum_raster()`. The Canopy Height Model (CHM) is triangulation-based using `triangulate()` and `rasterize()` on the first returns. The CHM is post-processed with `pit_fill()`, an algorithm designed to enhance the CHM by filling pits and NAs. The reader may have noticed that the seeds are produced with the same raster than the one used in `region_growing()`. This is checked internally to ensure the seeds are matching the raster used for segmenting the trees. 
 
 In this tutorial, the pipeline is tested on one file to render the page faster. However, this pipeline can be applied to any number of files and will produce a continuous output, managing the buffer between files. Every intermediate output can be exported, and in this tutorial, we export everything to display all the outputs.
 
@@ -335,7 +333,7 @@ del = triangulate(15, filter = keep_ground(), ofile = tempgpkg())
 ans = exec(del, on = f)
 
 par(mar = c(2, 2, 1, 1))
-plot(ans, axes = T, lwd = 0.5)
+plot(ans, axes = T, lwd = 0.5, cex.axis = 0.5)
 ```
 
 The `hulls()` algorithm computes the contour of the mesh, producing a concave hull with holes:
@@ -346,10 +344,10 @@ bound = hulls(del)
 ans = exec(del+bound, on = f)
 
 par(mar = c(2, 2, 1, 1))
-plot(ans, axes = T, lwd = 0.5, col = "gray")
+plot(ans, axes = T, lwd = 0.5, col = "gray", cex.axis = 0.5)
 ```
 
-However `hulls()` is more likely to be used without a triangulation. In this case it returns the bounding box of each LAS/LAZ file read from the header. And if it is used with `triangulate(0)` it returns the convex hull but this is a very inefficient way to get the convex hull.
+However `hulls()` is more likely to be used without a triangulation. In this case it returns the bounding box of each point cloud file. And if it is used with `triangulate(0)` it returns the convex hull but this is a very inefficient way to get the convex hull.
 
 ## Readers
 
