--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -186,7 +186,7 @@ terra::plot(ans[[2]], mar = c(1, 1, 1, 3), col = col)
 ```
 
 <blockquote style="background-color: #d6e9f9; border-left: 5px solid #428bca; padding: 10px;font-size: 14px; border-radius: 5px;">
-For simplicity the package has pre-installed pipelines named `chm()` and `dtm()` that do what is explained above.
+For simplicity the package has pre-installed pipelines named `dsm()` and `dtm()` that do what is explained above.
 </blockquote>
 
 ### Rasterize - R expression
